added java grpc client
