# pkg/services/api/api_docs/swagger.json
@@ -204,5 +204,12 @@
                 }
             }
         }
+    },
+    "securityDefinitions": {
+        "JWT_AUTH": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
+        }
     }
 }
